welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:4: error: reassignment to val
	parotTrouble=false
                    ^parotTrouble:6: error: reassignment to val
}else{parotTrouble=true}
                  ^